01-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-whoami
  labels:
    app: simple-whoami
spec:
  selector:
    matchLabels:
      app: simple-whoami
  replicas: 3
  template:
    metadata:
      labels:
        app: simple-whoami
    spec:
      containers:
        - name: simple-whoami
          image: jwilder/whoami
          ports:
            - containerPort: 8000
              name: http
