01-service/service.yml
kind: Service
apiVersion: v1
metadata:
  name: simple-whoami
  labels:
    app: simple-whoami
spec:
  type: ClusterIP
  ports:
    -
      name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: simple-whoami
