01-service/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    # now let us connect this ingress with the internal ingress controller
    # which we defined in the step beforce
    kubernetes.io/ingress.class: internal-nginx
spec:
  rules:
    - http:
        paths:
          - path: /whoami
            backend:
              serviceName: simple-whoami
              servicePort: 80
